# AIsaac_strategy_for_ROS2_test

./: .gitignore  README.md  readme
consai_msgs/action/: RobotControl.action
install/: local_setup.sh  setup.sh
install/consai_msgs/share/consai_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/consai_vision_tracker/share/consai_vision_tracker/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
robocup_ssl_comm/src/: vision_component.cpp
robot_controller/: CMakeLists.txt  package.xml
robot_controller/config/: pid_gains.yaml
robot_controller/include/robot_controller/: controller_component.hpp  field_info_parser.hpp  grsim_command_converter.hpp  tools.h  visibility_control.h
robot_controller/include/robot_controller/ball_wrap_kick_include/: micon_wrap_kick.h  wrap_kick.h
robot_controller/include/robot_controller/dribble_include/: dribble.h
robot_controller/include/robot_controller/dwa_include/: DWA_path_recover.h  RaspiTrapezoidalControl.h  Target_abjust.h  TrapezoidalControl.h  dwa.h
robot_controller/launch/: test.launch.py
robot_controller/src/: controller_component.cpp  field_info_parser.cpp  geometry_tools.cpp  grsim_command_converter.cpp  tools.c
robot_controller/src/ball_wrap_kick_src/: micon_wrap_kick.c  wrap_kick.c
robot_controller/src/dribble_src/: dribble.c
robot_controller/src/dwa_src/: DWA_path_recover.c  RaspiTrapezoidalControl.c  Target_abjust.c  TrapezoidalControl.c  dwa2.c  tools.c
(+725 files in other folders)
