<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_controller</name>
  <version>0.0.0</version>
  <description>robot controller of robocup ssl</description>
  <maintainer email="shota@todo.todo">shota</maintainer>
  <license>BSD-3-Clauses</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_command_msgs</depend>
  <depend>consai_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>robocup_ssl_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
